fix image alignment in editor

--- a/css/admin.scss
+++ b/css/admin.scss
@@ -161,7 +161,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: transparent no-repeat 100%/cover;
+    background: transparent no-repeat center 100%/cover;
   }
 
   .area--logo {
